# docker-scan

./: .gitignore  Dockerfile  LICENSE  README.md  hello-world  install.sh  lint.sh  pyproject.toml  requirements-to-build.txt  requirements-to-scan.txt  scan.sh  setup.py  shellcheck2sonar.py  sonar-project.properties  trivy2sonar.py
.github/workflows/: build.yml
cli/: hello.py  loc.py  options.py
helloworld/: aggregations.py  app_branches.py  applications.py  branches.py  changelog.py  components.py  devops.py  exceptions.py  findings.py  groups.py  hello.py  hotspots.py  issues.py  languages.py  measures.py  metrics.py  organizations.py  platform.py  portfolio_reference.py  portfolios.py  projects.py  pull_requests.py  qualitygates.py  qualityprofiles.py  rules.py  settings.py  sif.py  sif_node.py  sqobject.py  syncer.py  tasks.py  tokens.py  users.py  utilities.py  webhooks.py
helloworld/audit/: __init__.py  config.py  problem.py  rules.py
helloworld/dce/: app_nodes.py  nodes.py  search_nodes.py
helloworld/permissions/: aggregation_permissions.py  application_permissions.py  global_permissions.py  permission_templates.py  permissions.py  portfolio_permissions.py  project_permissions.py  quality_permissions.py  qualitygate_permissions.py  qualityprofile_permissions.py  template_permissions.py
helloworld/util/: sonar_cache.py
